moves counter added to HTML

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         </div>
     </div>
 
+    <div class="choice">make your choice</div>
+
+    <!--how many moves left-->
+    <div class="moves-left">Moves Left: 10</div>
+
 
     </div>
     
