css added to moves section

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
         <!--score display area-->
     <div class="score-area">
         <div class="player-score">
-            <h2>Player Score:</h2>
+            <h2>Player Score: 0</h2>
         </div>
         <div class="computer-score">
-            <h2>Computer Score:</h2>
+            <h2>Computer Score: 0</h2>
         </div>
     </div>
 
     <div class="choice">make your choice</div>
 
     <!--how many moves left-->
-    <div class="moves-left">Moves Left: 10</div>
+    <div class="moves-left">Moves Outstanding: 10</div>
 
 
     </div>
