added rock paper scissors buttons

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
     <!--how many moves left-->
     <div class="moves-left">Moves Outstanding: 10</div>
 
+    <!--Button options-->
+    <div class="options">
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
+    </div>
+
 
     </div>
 <script src="assets/JS/index.js"></script>    
