add result and reload button & styles

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
         <!--score display area-->
     <div class="score-area">
         <div class="player-score">
-            <h2>Player Score: 0</h2>
+            <h2>Player Score:</h2>
+            <p class="p-count count">0</p>
         </div>
         <div class="computer-score">
-            <h2>Computer Score: 0</h2>
+            <h2>Computer Score:</h2>
+            <p class="c-count count">0</p>
         </div>
     </div>
 
@@ -33,8 +35,10 @@
         <button class="paper">Paper</button>
         <button class="scissors">Scissors</button>
     </div>
-
-
+    <!--Result of game-->
+    <div class="result"></div>
+    <!--reload game-->
+    <button class="reload"></button>
     </div>
 <script src="assets/JS/index.js"></script>  
 </body>
