added rules footer

--- a/index.html
+++ b/index.html
@@ -49,5 +49,9 @@
 
     <script src="assets/JS/index.js"></script>
 </body>
+<footer class="rules">
+    <h2 class="h-rules">Rules</h2>
+    <p class="p-rules">Rock Beats Scissors  -  Scissors Beats Paper  -  Paper Beats Rock</p>
+</footer>
 
 </html>
