--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <section class="game">
         <!--Title -->
-        <div class="title">Rock Paper Scissor</div>
+        <div class="title">Rock Paper Scissors</div>
 
         <!--Display Score of player and computer -->
         <div class="score">
@@ -34,9 +34,9 @@
 
         <!--Options available to player to play game -->
         <div class="options">
-            <button class="rock">Rock</button>
-            <button class="paper">Paper</button>
-            <button class="scissor">Scissors</button>
+            <button class="rock">ROCK</button>
+            <button class="paper">PAPER</button>
+            <button class="scissor">SCISSORS</button>
         </div>
 
         <!--Final result of game -->
