--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <section class="game">
         <!--Title -->
-        <div class="title">Rock Paper Scissors</div>
+        <div class="title">Rock Paper Scissor</div>
 
         <!--Display Score of player and computer -->
         <div class="score">
@@ -34,24 +34,28 @@
 
         <!--Options available to player to play game -->
         <div class="options">
-            <button class="rock">ROCK</button>
-            <button class="paper">PAPER</button>
-            <button class="scissor">SCISSORS</button>
+            <button class="rock">Rock</button>
+            <button class="paper">Paper</button>
+            <button class="scissor">Scissors</button>
         </div>
-
         <!--Final result of game -->
         <div class="result"></div>
-
-        <!--Reload the game -->
+                <!--Reload the game -->
         <button class="reload"></button>
 
+            <div class="display-choice">
+                <div class="player">
+                    <h2>Player Choice</h2>
+                    <img id="player-image" src="assets/Images/R-P-S.jpg" alt="Rock Paper Scissors">
+                </div>
+                <div class="computer">
+                    <h2>Computer Choice</h2>
+                    <img id="computer-image" src="assets/Images/R-P-S.jpg" alt="Rock Paper Scissors">
+                </div>
+            </div>
     </section>
 
     <script src="assets/JS/index.js"></script>
 </body>
-<footer class="rules">
-    <h2 class="h-rules">Rules</h2>
-    <p class="p-rules">Rock Beats Scissors  -  Scissors Beats Paper  -  Paper Beats Rock</p>
-</footer>
 
 </html>
