final Commit before publish

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <section class="game">
         <!--Title -->
-        <div class="title">Rock Paper Scissor</div>
+        <div class="title">Rock Paper Scissors</div>
 
         <!--Display Score of player and computer -->
         <div class="score">
@@ -42,17 +42,6 @@
         <div class="result"></div>
                 <!--Reload the game -->
         <button class="reload"></button>
-
-            <div class="display-choice">
-                <div class="player">
-                    <h2>Player Choice</h2>
-                    <img id="player-image" src="assets/Images/R-P-S.jpg" alt="Rock Paper Scissors">
-                </div>
-                <div class="computer">
-                    <h2>Computer Choice</h2>
-                    <img id="computer-image" src="assets/Images/R-P-S.jpg" alt="Rock Paper Scissors">
-                </div>
-            </div>
     </section>
 
     <script src="assets/JS/index.js"></script>
