--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="The rock paper scissors website offers a simple and fun way to challenge others in this classic game. Users can choose to play against the computer or challenge other players online. The game offers different levels of difficulty and various game modes, including best of three and sudden death. The website also provides tips on the best strategies for winning. With its easy-to-use interface and addictive gameplay, this website is a great way to pass the time while having some fun with friends or opponents from around the world.">
     <title>Rock-Paper-Scissors</title>
     <link rel="icon" href="assets/Images/favicon.ico">
+    <script src="https://kit.fontawesome.com/b92f17d980.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/CSS/styles.css">
 </head>
 <body>
@@ -35,9 +36,9 @@
 
         <!--Options available to player to play game -->
         <div class="options">
-            <button class="rock">Rock</button>
-            <button class="paper">Paper</button>
-            <button class="scissor">Scissors</button>
+            <button class="rock"><i class="fa-solid fa-hand-back-fist"></i></button>
+            <button class="paper"><i class="fa-solid fa-hand"></i></button>
+            <button class="scissor"><i class="fa-solid fa-hand-scissors"></i></button>
         </div>
         <!--Final result of game -->
         <div class="result"></div>
