--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
         <!--Options available to player to play game -->
         <div class="options">
-            <button class="rock"><i class="fa-solid fa-hand-back-fist"></i></button>
-            <button class="paper"><i class="fa-solid fa-hand"></i></button>
-            <button class="scissor"><i class="fa-solid fa-hand-scissors"></i></button>
+            <button class="rock">Rock</button>
+            <button class="paper">Paper</button>
+            <button class="scissor">Scissors</button>
         </div>
         <!--Final result of game -->
         <div class="result"></div>
